# dev-telemetry

./: .gitignore  ARCHITECTURE.md  CHANGELOG.md  CLAUDE.md  Makefile  README.md  mprocs.yaml  package.json  tsconfig.base.json  turbo.json
.claude/agents/: backend-engineer.md  tech-lead.md
.github/workflows/: ci.yml  release.yml
api/: .env.example  main.py  pyproject.toml
api/app/: auth.py  config.py  db.py  models.py
api/app/analysis/: classifier.py  content.py  llm.py  metrics.py  narrative_service.py  reporting.py
api/app/github/: client.py  collector.py
api/app/routers/: refresh.py  reports.py
api/app/schemas/: narrative.py  reports.py
api/tests/: test_metrics.py
apps/web/: next.config.ts  package.json  vitest.config.mts
docs/: github-pat-guide.md
docs/profiles/: data_engineer_jr.md  data_engineer_pleno.md  data_engineer_sr.md  software_engineer_estagio.md  software_engineer_jr.md  software_engineer_pleno.md  software_engineer_sr.md  student_dados.md  student_software.md
tests/: package.json  vitest.config.ts
tests/compatibility/: README.md  cross-browser.spec.ts
tests/functional/: classifier-report.test.ts
tests/integration/: crypto-pipeline.test.ts
tests/load/: README.md  sync-api.js
tests/performance/: classifier.bench.ts
tests/regression/: edge-cases.test.ts
tests/security/: isolation.test.ts
tests/smoke/: packages.test.ts  routes.test.ts
tests/stress/: README.md  api-stress.js
tests/system/: backfill-pipeline.test.ts
tests/unit/: README.md
tests/usability/: README.md  a11y.spec.ts
web/: package.json  pnpm-lock.yaml
(+78 files in other folders)
