[project]
name = "api"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "asyncpg>=0.31.0",
    "fastapi>=0.136.3",
    "google-genai>=2.8.0",
    "granian[reload]>=2.7.5",
    "httpx>=0.28.1",
    "pydantic-settings>=2.14.1",
    "scalar-fastapi>=1.8.2",
    "sqlalchemy[asyncio]>=2.0.50",
]

[dependency-groups]
dev = [
    "pytest>=9.0.3",
]
